# windows-llm-bridge

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PLAN.md  README.en.md  README.md  REQUIREMENTS.md  pyproject.toml  wlb-tools.example.toml
docs/: architecture.md  contributing.md  errors.md  http-transport.md  mcp-integration.md  pty.md  quickstart.md  skills.md  streaming.md  walkthrough.md  web-ui.md  windows-side-setup.md
scripts/: check_sensitive_words.sh  install.sh  uninstall.sh
scripts/windows-agent/: README.md  install-agent.ps1  wlb-agent.example.toml  wlb_agent.py
scripts/windows-setup/: enable-openssh.ps1
src/wlb/: __init__.py
src/wlb/api/: __init__.py  server.py
src/wlb/api/static/: app.js  casts.html  casts.js  index.html  pty.html  pty.js  style.css
src/wlb/capabilities/: __init__.py  cmd.py  filesync.py  powershell.py  pty_recorder.py  skill.py  status.py  tool.py
src/wlb/cli/: __init__.py  common.py  doctor_cli.py  filesync_cli.py  main.py  setup_cli.py  skill_cli.py  tool_cli.py  web_cli.py
src/wlb/infra/: __init__.py  config.py  env_loader.py  errors.py  permissions.py  registry.py  result.py  safe_path.py  smb_maps.py  tools_config.py  workspace.py
src/wlb/mcp/: __init__.py  server.py  transport_factory.py
src/wlb/mcp/tools/: __init__.py  cmd.py  filesync.py  powershell.py  skill.py  status.py  tool.py
src/wlb/transport/: __init__.py  _windows_pty.py  base.py  http.py  hybrid.py  local.py  ssh.py  ssh_pool.py
tests/: conftest.py  test_smoke.py
tests/api/: test_casts_endpoints.py  test_endpoints.py  test_pty_websocket.py  test_skill_endpoints.py  test_websocket.py
tests/capabilities/: test_cmd.py  test_filesync.py  test_filesync_smb.py  test_pty_recorder.py  test_run_tool_with_progress.py  test_skill.py  test_status.py  test_tool.py  test_tool_stream.py
tests/cli/: test_describe.py  test_setup.py  test_skill.py
tests/infra/: test_profile.py  test_smb_maps.py  test_tools_config.py
tests/mcp/: test_registration.py  test_skill.py  test_tool_run_progress.py
tests/transport/: test_base_streaming_fallback.py  test_host_label.py  test_http.py  test_http_pty_client.py  test_http_streaming.py  test_local.py  test_local_pty.py  test_local_streaming.py  test_ssh.py  test_ssh_filesync.py  test_ssh_integration.py  test_ssh_pool.py  test_windows_pty_dispatch.py  test_wlb_agent_contract.py  test_wlb_agent_pty.py
walkthrough/: 01-windows-bootstrap.ps1  02-linux-pair.sh  03-smoke-tests.sh  04-smoke-checklist.md  README.md  local-notes.env.example
